# Autonomous-Aerial-SAR

./: .gitignore  PROGRESS FILE.md  README FILE.md  setup.py
coverage_planner/: package.xml  setup.cfg  setup.py
coverage_planner/config/: iiti_campus.yaml  mavros_params.yaml
coverage_planner/coverage_planner/: coverage_planner_node.py
coverage_planner/launch/: sar_sitl.launch.py
coverage_planner/tests/: check_efficiency.py
coverage_planning/: package.xml  setup.cfg
coverage_planning/config/: iiti_sar_zone.yaml
coverage_planning/coverage_planning/: __init__.py  coverage_planner_node.py  planner.py  waypoint_follower.py
coverage_planning/tests/: check_iiti_polygon.py  test_planner.py
coverage_planning/worlds/: iiti_sar.world
flight_control/: .gitignore  mission.py  package.xml
flight_control/flight_control/: mission.py
human_detection/: package.xml  setup.py
human_detection/human_detection/: detection_node.py  export_onnx.py  fps_test.py
sar_drone/: package.xml  setup.py
sar_drone/sar_drone/: flight_controller-1.py  flight_controller.py  geotagger.py  position_estimator.py  results_logger.py
